--- a/BACK/themes/Pear/styles/critical.css
+++ b/BACK/themes/Pear/styles/critical.css
@@ -12,6 +12,7 @@
 /*  font-style: normal;*/
 /*}*/
 
+
 @font-face {
   font-family: "GTWalsheimPro";
   src: url("../font/GT-Walsheim-Condensed-Medium.woff2") format("woff2"), url("../font/GT-Walsheim-Condensed-Medium.woff") format("woff");
@@ -25,15 +26,34 @@
   font-style: normal;
 }
 
+
+
+@font-face {
+  font-family: "GTWalsheimProCondensed";
+  src: url("../font/GT-Walsheim-Condensed-Regular.woff2") format("woff2"), url("../font/GT-Walsheim-Condensed-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GTWalsheimProCondensed";
+  src: url("../font/GT-Walsheim-Medium.woff2") format("woff2"), url("../font/GT-Walsheim-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+
 :root {
   --color-white: #fff;
   --color-black: #023D27;
   --color-grey:#F2F3F0;
+  --color-grey-hover:#E6E9E4;
   --color-primary:#089946 ;
   --color-yellow:#FFD800;
+  --color-yellow-hover:#FFEC81;
   --color-light:#EEF7EB;
   --color-yellow-gradient:linear-gradient(45.78deg, #FFE13C 0%, #FDC201 80%);
   --GT:'GTWalsheimPro', sans-serif;
+  --GTCons:'GTWalsheimProCondensed', sans-serif;
 }
 
 *, *:before,
@@ -101,15 +121,42 @@ button {
 h1 {
   margin: 0;
 }
+@media only screen and (max-width: 1920px) {
+  html {
+    font-size: 13.33px;
+  }
+}
+@media only screen and (max-width: 1800px) {
+  html {
+    font-size: 11.71px;
+  }
+}
+@media only screen and (max-width: 1600px) {
+  html {
+    font-size: 11.11px;
+  }
+}
+@media only screen and (max-width: 1536px) {
+  html {
+    font-size: 10.67px;
+  }
+}
 
-html {
-  font-size: 10px;
-  scroll-behavior: smooth;
+
+@media only screen and (max-width: 1440px) {
+  html {
+    font-size: 10px;
+  }
 }
 
 @media only screen and (max-width: 1366px) {
   html {
     font-size: 9.49px;
+  }
+}
+@media only screen and (max-width: 1350px) {
+  html {
+    font-size: 9.375px;
   }
 }
 
@@ -118,13 +165,27 @@ html {
     font-size: 8.88px;
   }
 }
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 8.333px;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  html {
+    font-size: 7.5px;
+  }
+}
 
 @media only screen and (max-width: 1024px) {
   html {
     font-size: 7.11px;
   }
 }
-
+@media only screen and (max-width: 900px) {
+  html {
+    font-size: 6.25px;
+  }
+}
 @media only screen and (max-width: 768px) {
   html {
     font-size: 5.33px;
