--- a/BACK/themes/Pear/styles/index.css
+++ b/BACK/themes/Pear/styles/index.css
@@ -1163,7 +1163,7 @@
 
 .content h2, .content h3, .content h4, .content h5, .content h6 {
   font: 700 4rem/4.4rem var(--GT);
-  text-transform: capitalize;
+  /*text-transform: capitalize;*/
 }
 
 .promise__back {
@@ -1188,7 +1188,7 @@
   right: -48vw;
   width: 50vw;
   height: 48rem;
-  bottom: 0;
+  bottom: -0.5rem;
   z-index: -1;
   background-color: var(--color-grey);
   -webkit-clip-path: ellipse(86% 42% at 72% 88%);
@@ -1222,7 +1222,7 @@
   content: '';
   position: absolute;
   bottom: -27px;
-  left: 7%;
+  left: 6%;
   width: 27rem;
   height: 23rem;
   background: url(../img/promise-svg.svg) center/27rem 23rem no-repeat;
@@ -3029,7 +3029,11 @@ label.error {
 
 
 
-
+@media only screen and (max-width: 2280px) {
+  .promise .container:after{
+    display: none;
+  }
+}
 @media only screen and (max-width: 1440px) {
   .promise .container:before, .promise .container:after, .campus__form .container:before, .campus__form .container:after {
     display: none;
