--- a/BACK/themes/Pear/styles/critical.css
+++ b/BACK/themes/Pear/styles/critical.css
@@ -121,6 +121,10 @@ button {
 h1 {
   margin: 0;
 }
+
+html {
+  font-size: 13.33px;
+}
 @media only screen and (max-width: 1920px) {
   html {
     font-size: 13.33px;
