--- a/BACK/themes/Pear/styles/index.css
+++ b/BACK/themes/Pear/styles/index.css
@@ -3492,7 +3492,7 @@ label.error {
     gap:1.4rem;
   }
   .seminar__topic {
-    margin: 0 -2rem;
+    margin: 0 -2rem 0 0;
     gap: 0.8rem;
     overflow-x: auto;
     -ms-overflow-style: none;
@@ -3668,7 +3668,7 @@ label.error {
     border-radius: 3.2rem;
   }
   .partners__img img {
-    height: 4.8rem;
+    height: auto;
   }
   .partners .container {
     padding-top: 3.2rem;
@@ -4090,7 +4090,7 @@ label.error {
   }
   .partners__list{
     flex-direction: column;
-    gap:1rem;
+    gap:3rem;
   }
   .banner__front .container{
     min-height: auto;
