--- a/BACK/themes/Pear/styles/index.css
+++ b/BACK/themes/Pear/styles/index.css
@@ -129,7 +129,7 @@
 .section__banner {
   background-color: var(--color-primary);
   position: relative;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
 }
 
 .section__banner-flex {
@@ -3186,16 +3186,16 @@ label.error {
 }
 
 .calendar{
-  margin: 4rem 0 5.6rem;
+  margin: 1rem 0 5.6rem;
   position: relative;
   min-height: 10rem;
 }
 
-.calendar__section-title{
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+/*.calendar__section-title{*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*}*/
 
 
 
@@ -4135,6 +4135,9 @@ label.error {
   }
   .seminar__radio-item > *{
     padding: 1rem;
+  }
+  .wrap__visible .section__banner .container:before{
+    display: none;
   }
 }
 
