--- a/BACK/themes/Pear/styles/index.css
+++ b/BACK/themes/Pear/styles/index.css
@@ -1609,11 +1609,12 @@
 }
 
 .card__hover {
-  position: absolute;
+  /*position: absolute;*/
   /*top: 50%;*/
   /*opacity: 0;*/
   /*transform: translate(-50%, -50%);*/
   /*left: 50%;*/
+  min-height: 40rem;
   width: 100%;
   height: 100%;
   z-index: 2;
@@ -3350,6 +3351,7 @@ label.error {
         flex-direction: column;
     -ms-flex-pack: center;
         justify-content: center;
+    margin-bottom: 7rem;
   }
   .header__menu.active {
     display: -ms-flexbox;
@@ -3589,13 +3591,19 @@ label.error {
     gap:1.4rem;
   }
   .seminar__topic {
-    margin: 0 -2rem 0 0;
+    margin: 0 -2rem;
     gap: 0.8rem;
     overflow-x: auto;
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     padding-bottom: 1rem;
+  }
+  .seminar__topic a:first-child{
+    margin-left: 2rem;
+  }
+  .seminar__topic a:last-child{
+    margin-right: 2rem;
   }
   .seminar__radio-item > * {
     font-size: 1.6rem;
@@ -3764,7 +3772,16 @@ label.error {
   .competence__item {
     border-radius: 3.2rem;
   }
+  .partners__item{
+    width: 70%;
+    margin: 0 auto;
+  }
+
   .partners__img img {
+    height: auto;
+  }
+  .partners__img{
+    width: 100%;
     height: auto;
   }
   .partners .container {
@@ -3807,10 +3824,10 @@ label.error {
     padding-top: 2.8rem;
     margin-top: 2.8rem;
   }
-  .footer__menu:last-child .section__text:last-child {
-    font-size: 1.4rem;
-    line-height: 2.1rem;
-  }
+  /*.footer__menu:last-child .section__text:last-child {*/
+  /*  font-size: 1.4rem;*/
+  /*  line-height: 2.1rem;*/
+  /*}*/
   .section__banner-block .section__search {
     margin: 0;
   }
@@ -4234,6 +4251,9 @@ label.error {
   }
   .price__wrap{
     align-items: center;
+  }
+  .competence .card__img img{
+    border-radius: 0;
   }
 }
 
