--- a/BACK/themes/Pear/styles/critical.css
+++ b/BACK/themes/Pear/styles/critical.css
@@ -40,7 +40,18 @@
   font-weight: 500;
   font-style: normal;
 }
-
+@font-face {
+  font-family: "Roboto";
+  src: url("../font/Roboto-Medium.woff2") format("woff2"), url("../font/Roboto-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RobotoCondensed";
+  src: url("../font/Roboto-Condensed-Regular.woff2") format("woff2"), url("../font/Roboto-Condensed-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
 
 :root {
   --color-white: #fff;
@@ -54,6 +65,8 @@
   --color-yellow-gradient:linear-gradient(45.78deg, #FFE13C 0%, #FDC201 80%);
   --GT:'GTWalsheimPro', sans-serif;
   --GTCons:'GTWalsheimProCondensed', sans-serif;
+  --Roboto:'Roboto', sans-serif;
+  --RobotoCons:'RobotoCondensed', sans-serif;
 }
 
 *, *:before,
